# keychain-tiny-game

./: README.md
firmware/: .gitignore  Makefile  main.c
hardware/: .gitignore  keychain.kicad_pcb  keychain.kicad_pro
hardware/board/: microgame.kicad_pcb  microgame.kicad_pro  microgame.kicad_sch
software/: .clang-format  .gitignore  CMakeLists.txt
software/cmake/: FindSimAvr.cmake
software/firmware/: CMakeLists.txt  main.c
software/sim/: CMakeLists.txt  main.cpp
